Update minimum java version to 21