@@ -158,7 +158,7 @@ public class LegacyPlayerListItemPacket implements MinecraftPacket {
         }
       }
     } else {
-      Item item = items.get(0);
+      Item item = items.getFirst();
       Component displayNameComponent = item.getDisplayName();
       if (displayNameComponent != null) {
         String displayName = LegacyComponentSerializer.legacySection()
@@ -269,7 +269,7 @@ public class LegacyPlayerListItemPacket implements MinecraftPacket {
       return this;
     }
 
-    public IdentifiedKey getPlayerKey() {
+    public @Nullable IdentifiedKey getPlayerKey() {
       return playerKey;
     }
   }
